fixed mobile-menu z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -485,6 +485,7 @@ a {
   position: fixed;
   top: 0;
   right: 0;
+  z-index: 100;
   width: 100vw;
   height: 100vh;
   display: flex;
